changed files from assignment 2 to match view pattern

--- a/public/assignment/views/Page/page-edit.view.client.html
+++ b/public/assignment/views/Page/page-edit.view.client.html
@@ -1,25 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>New page</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../CSS/style.css">
-</head>
-<body>
+
 
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-footer">
-            <a class="navbar-brand"href="page-list.html">
+            <a class="navbar-brand"href="page-list.view.client.html">
                 <scan class="glyphicon glyphicon-menu-left"></scan>
             </a>
             <a class="navbar-brand" href="#">
-                New Page
+                Edit Page
             </a>
             <p class="navbar-text pull-right">
-                <a href="page-list.html" class="navbar-link">
+                <a href="page-list.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-ok">
                       </span>
                 </a>
@@ -30,19 +21,20 @@
 
 <form>
     <div class="form-group">
-        <label for="exampleInputEmail1">Name</label>
+        <label for="exampleInputEmail1">Application Name</label>
         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
     </div>
     <div class="form-group">
-        <label for="exampleInputPassword1">Description</label>
+        <label for="exampleInputPassword1">Application Description</label>
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
+    <a type="submit" href="page-list.view.client.html" class="btn btn-default btn-danger btn-block">Applications</a>
 </form>
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-footer">
             <p class="navbar-text pull-right">
-                <a href="../../User/profile.html" class="navbar-link">
+                <a href="../User/profile.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-user">
                       </span>
                 </a>
@@ -50,5 +42,3 @@
         </div>
     </div>
 </nav>
-</body>
-</html>
