--- a/public/assignment/views/Widget/widget-list.view.client.html
+++ b/public/assignment/views/Widget/widget-list.view.client.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Widget-list</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../../CSS/style.css">
-</head>
-<body>
+
 
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
@@ -19,7 +10,7 @@
                 Widgets
             </a>
             <p class="navbar-text pull-right">
-                <a href="widget-choose.html" class="navbar-link">
+                <a href="widget-choose.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-plus">
                       </span>
                 </a>
@@ -35,7 +26,7 @@
             <h1>PopSci</h1>
         </div>
         <div class="col-lg-3 pull-right">
-            <a href="widget-header.html" class="navbar-link">
+            <a href="widget-header.view.client.html" class="navbar-link">
             <span class="glyphicon glyphicon-cog">
             </span>
             </a>
@@ -49,7 +40,7 @@
             <h3>SPACEX'S REUSABLE ROCKETS</h3>
         </div>
         <div class="col-lg-3 pull-right">
-            <a href="widget-header.html" class="navbar-link">
+            <a href="widget-header.view.client.html" class="navbar-link">
             <span class="glyphicon glyphicon-cog">
             </span>
             </a>
@@ -64,7 +55,7 @@
             <img src="http://www.popsci.com/sites/popsci.com/files/styles/large_1x_/public/images/2016/05/26428481444_9c8dc1a3bb_k-980x653.jpg?itok=S_uV1RG7"/>
         </div>
         <div class="col-lg-3 pull-right">
-            <a href="widget-image.html" class="navbar-link">
+            <a href="widget-image.view.client.html" class="navbar-link">
             <span class="glyphicon glyphicon-cog">
             </span>
             </a>
@@ -83,7 +74,7 @@
                 and make sure they can fly again.</p>
         </div>
         <div class="col-lg-3 pull-right">
-            <a href="widget-choose.html" class="navbar-link">
+            <a href="widget-choose.view.client.html" class="navbar-link">
             <span class="glyphicon glyphicon-cog">
             </span>
             </a>
@@ -96,7 +87,7 @@
             <h3>Everything is a Remix</h3>
         </div>
         <div class="col-lg-3 pull-right">
-            <a href="widget-header.html" class="navbar-link">
+            <a href="widget-header.view.client.html" class="navbar-link">
             <span class="glyphicon glyphicon-cog">
             </span>
             </a>
@@ -110,7 +101,7 @@
                     allowfullscreen></iframe>
         </div>
         <div class="col-lg-3 pull-right">
-            <a href="widget-youtube.html" class="navbar-link">
+            <a href="widget-youtube.view.client.html" class="navbar-link">
             <span class="glyphicon glyphicon-cog">
             </span>
             </a>
@@ -268,7 +259,7 @@
             </p>
         </div>
         <div class="col-lg-3 pull-right">
-            <a href="widget-choose.html" class="navbar-link">
+            <a href="widget-choose.view.client.html" class="navbar-link">
             <span class="glyphicon glyphicon-cog">
             </span>
             </a>
@@ -282,7 +273,7 @@
         <div class="container-fluid">
             <div class="navbar-footer">
                 <p class="navbar-text pull-right">
-                    <a href="../../../User/profile.html" class="navbar-link">
+                    <a href="../../../views/User/profile.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-user">
                       </span>
                     </a>
@@ -291,5 +282,3 @@
         </div>
     </nav>
 
-</body>
-</html>
