--- a/public/assignment/views/User/profile.view.client.html
+++ b/public/assignment/views/User/profile.view.client.html
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="viewport" content="initial-scale=1.25, user-scalable = no">
-    <title>Register</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/style.css">
-</head>
-<body>
+
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-footer">
@@ -18,7 +6,7 @@
                 Profile
             </a>
             <p class="navbar-text pull-right">
-                <a href="profile.html" class="navbar-link">
+                <a href="profile.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-ok">
                       </span>
                 </a>
@@ -46,7 +34,7 @@
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
     <a class="btn btn-primary btn-block"
-       href="../Website/website-list.html">Websites</a>
+       href="../Website/website-list.view.client.html">Websites</a>
     <a class="btn btn-danger btn-block"
        href="login.view.client.html">Logout</a>
 </form>
@@ -54,7 +42,7 @@
     <div class="container-fluid">
         <div class="navbar-footer">
             <p class="navbar-text pull-right">
-                <a href="profile.html" class="navbar-link">
+                <a href="profile.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-user">
                       </span>
                 </a>
@@ -62,5 +50,3 @@
         </div>
     </div>
 </nav>
-</body>
-</html>
