--- a/public/assignment/views/Website/website-list.view.client.html
+++ b/public/assignment/views/Website/website-list.view.client.html
@@ -1,28 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="viewport" content="initial-scale=1.25, user-scalable = no">
-    <title>Website-list</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/style.css">
-</head>
-<body>
+
 
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-footer">
-            <a class="navbar-brand"href="../User/profile.html">
+            <a class="navbar-brand"href="../views/User/profile.view.client.html">
                 <scan class="glyphicon glyphicon-menu-left"></scan>
             </a>
-            <a class="navbar-brand" href="website-new.html">
+            <a class="navbar-brand" href="website-new.view.client.html">
                 Websites
             </a>
             <p class="navbar-text pull-right">
-                <a href="website-new.html" class="navbar-link">
+                <a href="website-new.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-plus">
                       </span>
                 </a>
@@ -36,7 +24,7 @@
     <table class="table table-striped">
         <tbody>
         <tr>
-            <td><a href="Page/page-list.html">Blogging App</a></td>
+            <td><a href="../views/Page/page-list.html">Blogging App</a></td>
             <td>
                 <a href="website-edit.html">
                     <scan class="glyphicon glyphicon-cog"></scan>
@@ -45,7 +33,7 @@
             </td>
         </tr>
         <tr>
-            <td><a href="Page/page-list.html">Blogging App</a></td>
+            <td><a href="../views/Page/page-list.html">Blogging App</a></td>
             <td>
                 <a href="website-edit.html">
                     <scan class="glyphicon glyphicon-cog"></scan>
@@ -54,7 +42,7 @@
             </td>
         </tr>
         <tr>
-            <td><a href="Page/page-list.html">Blogging App</a></td>
+            <td><a href="../views/Page/page-list.html">Blogging App</a></td>
             <td>
                 <a href="website-edit.html">
                     <scan class="glyphicon glyphicon-cog"></scan>
@@ -63,7 +51,7 @@
             </td>
         </tr>
         <tr>
-            <td><a href="Page/page-list.html">Blogging App</a></td>
+            <td><a href="../views/Page/page-list.html">Blogging App</a></td>
             <td>
                 <a href="website-edit.html">
                     <scan class="glyphicon glyphicon-cog"></scan>
@@ -78,7 +66,7 @@
     <div class="container-fluid">
         <div class="navbar-footer">
             <p class="navbar-text pull-right">
-                <a href="../User/profile.html" class="navbar-link">
+                <a href="../views/User/profile.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-user">
                       </span>
                 </a>
@@ -86,5 +74,3 @@
         </div>
     </div>
 </nav>
-</body>
-</html>
