--- a/public/assignment/views/Widget/widget-youtube.view.client.html
+++ b/public/assignment/views/Widget/widget-youtube.view.client.html
@@ -1,24 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Widget-Youtube</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../../CSS/style.css">
-</head>
-<body>
+
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-footer">
-            <a class="navbar-brand"href="widget-list.html">
+            <a class="navbar-brand"href="widget-list.view.client.html">
                 <scan class="glyphicon glyphicon-menu-left"></scan>
             </a>
             <a class="navbar-brand" href="#">
                 Widget Edit
             </a>
             <p class="navbar-text pull-right">
-                <a href="widget-list.html" class="navbar-link">
+                <a href="widget-list.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-ok">
                       </span>
                 </a>
@@ -44,13 +35,13 @@
         <label for="exampleInputPassword1"> Width</label>
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Width">
     </div>
-    <a type="submit" href="widget-list.html" class="btn btn-danger btn-block">Delete</a>
+    <a type="submit" href="widget-list.view.client.html" class="btn btn-danger btn-block">Delete</a>
 </form>
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-footer">
             <p class="navbar-text pull-right">
-                <a href="../../../User/profile.html" class="navbar-link">
+                <a href="../../../views/User/profile.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-user">
                       </span>
                 </a>
@@ -58,5 +49,3 @@
         </div>
     </div>
 </nav>
-</body>
-</html>
