got angular to work, routing path must be absolute

--- a/public/assignment/views/User/login.view.client.html
+++ b/public/assignment/views/User/login.view.client.html
@@ -11,7 +11,7 @@
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
         </div>
-        <a type="submit" href="p#/profile" class="btn btn-primary btn-block">Submit</a>
+        <a type="submit" href="#/profile" class="btn btn-primary btn-block">Submit</a>
         <a type="submit" href="#/register" class="btn btn-success btn-block">Register</a>
     </form>
 
