--- a/public/assignment/views/User/register.view.client.html
+++ b/public/assignment/views/User/register.view.client.html
@@ -13,6 +13,6 @@
         <label for="confirmpass">Confirm Password</label>
         <input type="password" class="form-control" id="confirmpass" placeholder="Password">
     </div>
-    <a type="submit" href="profile.view.client.html" class="btn btn-primary btn-block">Register</a>
-    <a type="submit" href="login.view.client.html" class="btn btn-danger btn-block">Cancel</a>
+    <a type="submit" href="#/profile" class="btn btn-primary btn-block">Register</a>
+    <a type="submit" href="#/login" class="btn btn-danger btn-block">Cancel</a>
 </form>
