--- a/public/assignment/views/User/profile.view.client.html
+++ b/public/assignment/views/User/profile.view.client.html
@@ -34,9 +34,9 @@
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
     <a class="btn btn-primary btn-block"
-       href="../Website/website-list.view.client.html">Websites</a>
-    <a class="btn btn-danger btn-block"
-       href="login.view.client.html">Logout</a>
+       href="#/user/{{model.user._id}}/website">Websites</a>
+    <a class="btn btn-danger btn-block" href="#/login">Logout</a>
+
 </form>
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
