--- a/public/assignment/views/User/login.view.client.html
+++ b/public/assignment/views/User/login.view.client.html
@@ -5,17 +5,16 @@
     </div>
     <h1>Login</h1>
 
-    <form>
-        <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-        </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-        </div>
+    <input ng-model="username" class="form-control"
+           placeholder="username"
+           type="text"/>
+    <input ng-model="password" class="form-control"
+           placeholder="password"
+           type="password">
         <a ng-click="model.login(username, password)" class="btn btn-primary btn-block">Login</a>
         <a type="submit" href="#/register" class="btn btn-success btn-block">Register</a>
-    </form>
+
 
 </div>
+
+
