--- a/public/assignment/views/User/profile.view.client.html
+++ b/public/assignment/views/User/profile.view.client.html
@@ -1,52 +1,66 @@
-
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
-        <div class="navbar-footer">
+        <div class="navbar-header">
             <a class="navbar-brand" href="#">
                 Profile
             </a>
             <p class="navbar-text pull-right">
-                <a href="profile.view.client.html" class="navbar-link">
-                      <span class="glyphicon glyphicon-ok">
-                      </span>
+                <a ng-click="model.updateUser()" class="navbar-link">
+                  <span class="glyphicon glyphicon-ok">
+                  </span>
                 </a>
             </p>
-
         </div>
     </div>
 </nav>
 
-<form>
-    <div class="form-group">
-        <label for="exampleInputEmail1">Username</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+<div class="container">
+
+    <div ng-show="model.success" class="alert alert-success">
+        {{model.success}}
     </div>
-    <div class="form-group">
-        <label for="exampleInputPassword1">Email</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+
+    <div ng-show="model.error" class="alert alert-danger">
+        {{model.error}}
     </div>
-    <div class="form-group">
-        <label for="exampleInputPassword1">First Name</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-    </div>
-    <div class="form-group">
-        <label for="exampleInputPassword1">Last Name</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-    </div>
+
+    <form>
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input ng-model="model.user.username"
+                   type="text"
+                   class="form-control"
+                   id="username"
+                   placeholder="alice"/>
+        </div>
+        <div class="form-group">
+            <label for="email">Email address</label>
+            <input ng-model="model.user.email"
+                   type="email"
+                   class="form-control"
+                   id="email"
+                   placeholder="alice@wonderland.com"/>
+        </div>
+        <div class="form-group">
+            <label for="first">First Name</label>
+            <input ng-model="model.user.firstName"
+                   type="text"
+                   class="form-control"
+                   id="first"
+                   placeholder="Alice"/>
+        </div>
+        <div class="form-group">
+            <label for="last">Last Name</label>
+            <input ng-model="model.user.lastName"
+                   type="text"
+                   class="form-control"
+                   id="last"
+                   placeholder="Wonderland"/>
+        </div>
+    </form>
+
     <a class="btn btn-primary btn-block"
        href="#/user/{{model.user._id}}/website">Websites</a>
-    <a class="btn btn-danger btn-block" href="#/login">Logout</a>
-
-</form>
-<nav class="navbar navbar-default navbar-fixed-bottom">
-    <div class="container-fluid">
-        <div class="navbar-footer">
-            <p class="navbar-text pull-right">
-                <a href="profile.view.client.html" class="navbar-link">
-                      <span class="glyphicon glyphicon-user">
-                      </span>
-                </a>
-            </p>
-        </div>
-    </div>
-</nav>
+    <a class="btn btn-danger btn-block"
+       href="#/login">Logout</a>
+</div>
