--- a/public/assignment/views/User/register.view.client.html
+++ b/public/assignment/views/User/register.view.client.html
@@ -1,18 +1,14 @@
-
-<h1>Register</h1>
-<form>
-    <div class="form-group">
-        <label for="email">Email address</label>
-        <input type="email" class="form-control" id="email" placeholder="Email">
-    </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" id="password" placeholder="Password">
-    </div>
-    <div class="form-group">
-        <label for="confirmpass">Confirm Password</label>
-        <input type="password" class="form-control" id="confirmpass" placeholder="Password">
-    </div>
-    <a type="submit" href="#/profile" class="btn btn-primary btn-block">Register</a>
-    <a type="submit" href="#/login" class="btn btn-danger btn-block">Cancel</a>
-</form>
+<div class="container">
+    <h2>Register</h2>
+    <input class="form-control"
+           placeholder="username"
+           type="text"/>
+    <input class="form-control"
+           placeholder="password"
+           type="password">
+    <input class="form-control"
+           placeholder="verify password"
+           type="password">
+    <a class="btn btn-primary btn-block" href="#/profile">Register</a>
+    <a class="btn btn-danger btn-block" href="#/login">Cancel</a>
+</div>
