--- a/public/assignment/views/User/profile.view.client.html
+++ b/public/assignment/views/User/profile.view.client.html
@@ -60,7 +60,7 @@
     </form>
 
     <a class="btn btn-primary btn-block"
-       href="#/user/{{model.user._id}}/website">Websites</a>
+       href="#/User/{{model.user._id}}/website">Websites</a>
     <a class="btn btn-danger btn-block"
        href="#/login">Logout</a>
 </div>
