--- a/public/assignment/views/Website/website-edit.html
+++ b/public/assignment/views/Website/website-edit.html
@@ -19,23 +19,31 @@
     </div>
 </nav>
 
+{{model.website}}
+
 <form>
     <div class="form-group">
-        <label for="exampleInputEmail1">Application Name</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+        <label for="websiteName">Website Name</label>
+        <input ng-model="model.website.name"
+               type="text"
+               class="form-control"
+               id="websiteName"
+               placeholder="alice"/>
     </div>
     <div class="form-group">
-        <label for="websiteDescription">Application Description</label>
-        <textarea type="text" class="form-control" id="websiteDescription" rows="10" placeholder="Description"></textarea>
+        <label for="description">Website Description</label>
+        <textarea rows="5" id="description" class="form-control">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</textarea>
     </div>
-    <a type="submit" href="website-list.view.client.html" class="btn btn-default btn-danger btn-block">Applications</a>
 </form>
+
+<a class="btn btn-danger btn-block"
+   href="website-list.html">Delete</a>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-footer">
             <p class="navbar-text pull-right">
-                <a href="../views/User/profile.view.client.html" class="navbar-link">
+                <a href="#/profile" class="navbar-link">
                       <span class="glyphicon glyphicon-user">
                       </span>
                 </a>
