--- a/public/assignment/views/Page/page-edit.view.client.html
+++ b/public/assignment/views/Page/page-edit.view.client.html
@@ -22,11 +22,11 @@
 <form>
     <div class="form-group">
         <label for="exampleInputEmail1">Application Name</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+        <input ng-model="model.page.name" type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
     </div>
     <div class="form-group">
         <label for="exampleInputPassword1">Application Description</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <input ng-model="model.page.description" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
     <a type="submit" href="page-list.view.client.html" class="btn btn-default btn-danger btn-block">Applications</a>
 </form>
