--- a/public/assignment/views/Page/page-new.view.client.html
+++ b/public/assignment/views/Page/page-new.view.client.html
@@ -21,11 +21,11 @@
 <form>
     <div class="form-group">
         <label for="exampleInputEmail1">Name</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+        <input ng-model="model.page.name" type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
     </div>
     <div class="form-group">
         <label for="exampleInputPassword1">Description</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <input ng-model="model.page.description" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
 </form>
 <nav class="navbar navbar-default navbar-fixed-bottom">
