--- a/public/assignment/views/Website/website-new.view.client.html
+++ b/public/assignment/views/Website/website-new.view.client.html
@@ -22,11 +22,11 @@
 <form>
     <div class="form-group">
         <label for="websitename">Name</label>
-        <input type="text" class="form-control" id="websitename" placeholder="Name">
+        <input ng-model="model.website.name" type="text" class="form-control" id="websitename" placeholder="Name">
     </div>
     <div class="form-group">
         <label for="websiteDescription">Description</label>
-        <textarea type="text" class="form-control" id="websiteDescription" rows="10" placeholder="Description"></textarea>
+        <textarea ng-model="model.page.description" type="text" class="form-control" id="websiteDescription" rows="10" placeholder="Description"></textarea>
     </div>
 </form>
 
