--- a/public/assignment/views/Page/page-list.view.client.html
+++ b/public/assignment/views/Page/page-list.view.client.html
@@ -19,44 +19,18 @@
 </nav>
 
 
-<div class="container-fluid">
-    <table class="table table-striped">
-        <tbody>
-        <tr>
-            <td><a href="../Widget/widget-list.view.client.html">Blog Post</a></td>
-            <td>
-                <a href="page-edit.view.client.html">
-                    <scan class="glyphicon glyphicon-cog"></scan>
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td><a href="../Widget/widget-list.view.client.html">Blogs</a></td>
-            <td>
-                <a href="page-edit.view.client.html">
-                    <scan class="glyphicon glyphicon-cog"></scan>
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td><a href="../Widget/widget-list.view.client.html">Home</a></td>
-            <td>
-                <a href="page-edit.view.client.html">
-                    <scan class="glyphicon glyphicon-cog"></scan>
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td><a href="../Widget/widget-list.view.client.html">About</a></td>
-            <td>
-                <a href="page-edit.view.client.html">
-                    <scan class="glyphicon glyphicon-cog"></scan>
-                </a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+<div class="container">
+    <ul class="list-group">
+        <li ng-repeat="website in model.websites" class="list-group-item">
+            <a href="../Page/page-list.html">{{website.name}}</a>
+            <a href="#/user/{{website.developerId}}/website/{{website._id}}" class="pull-right">
+                <span class="glyphicon glyphicon-cog"></span>
+                <span class="glyphicon glyphicon-play"></span>
+            </a>
+        </li>
+    </ul>
 </div>
+
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-footer">
