--- a/public/assignment/views/Website/website-list.view.client.html
+++ b/public/assignment/views/Website/website-list.view.client.html
@@ -22,7 +22,7 @@
 <div class="container">
     <ul class="list-group">
         <li ng-repeat="website in model.websites" class="list-group-item">
-            <a href="../Page/page-list.html">{{website.name}}</a>
+            <a href="#/user/{{website.developerId}}/website/{{website._id}}/page">{{website.name}}</a>
             <a href="#/user/{{website.developerId}}/website/{{website._id}}" class="pull-right">
                 <span class="glyphicon glyphicon-cog"></span>
                 <span class="glyphicon glyphicon-play"></span>
