more route fixing

--- a/public/assignment/views/Page/page-list.view.client.html
+++ b/public/assignment/views/Page/page-list.view.client.html
@@ -22,7 +22,7 @@
 <div class="container">
     <ul class="list-group">
         <li ng-repeat="page in model.pages" class="list-group-item">
-            <a href="../Page/page-list.html">{{page.name}}</a>
+            <a href="/page-list.html">{{page.name}}</a>
             <a href="#/user/{{website.developerId}}/website/{{website._id}}/page/{{page.id}}" class="pull-right">
                 <span class="glyphicon glyphicon-cog"></span>
                 <span class="glyphicon glyphicon-play"></span>
@@ -35,7 +35,7 @@
     <div class="container-fluid">
         <div class="navbar-footer">
             <p class="navbar-text pull-right">
-                <a href="../User/profile.view.client.html" class="navbar-link">
+                <a href="../user/profile.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-user">
                       </span>
                 </a>
