--- a/public/assignment/views/Page/page-edit.view.client.html
+++ b/public/assignment/views/Page/page-edit.view.client.html
@@ -34,7 +34,7 @@
     <div class="container-fluid">
         <div class="navbar-footer">
             <p class="navbar-text pull-right">
-                <a href="../User/profile.view.client.html" class="navbar-link">
+                <a href="../user/profile.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-user">
                       </span>
                 </a>
