--- a/public/assignment/views/Website/website-list.view.client.html
+++ b/public/assignment/views/Website/website-list.view.client.html
@@ -36,7 +36,7 @@
     <div class="container-fluid">
         <div class="navbar-footer">
             <p class="navbar-text pull-right">
-                <a href="../views/User/profile.view.client.html" class="navbar-link">
+                <a href="../views/user/profile.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-user">
                       </span>
                 </a>
