--- a/public/assignment/views/Widget/widget-list.view.client.html
+++ b/public/assignment/views/Widget/widget-list.view.client.html
@@ -22,7 +22,7 @@
 <div class="container">
     <ul class="list-group">
         <li ng-repeat="widget in model.widget" class="list-group-item">
-            <a href="../Page/page-list.html">{{widget.name}}</a>
+            <a href="../page/page-list.html">{{widget.name}}</a>
             <a href="#/user/{{website.developerId}}/website/{{website._id}}" class="pull-right">
                 <span class="glyphicon glyphicon-cog"></span>
                 <span class="glyphicon glyphicon-play"></span>
