--- a/public/assignment/views/Page/page-list.view.client.html
+++ b/public/assignment/views/Page/page-list.view.client.html
@@ -22,8 +22,8 @@
 <div class="container">
     <ul class="list-group">
         <li ng-repeat="page in model.pages" class="list-group-item">
-            <a href="/page-list.html">{{page.name}}</a>
-            <a href="#/user/{{website.developerId}}/website/{{website._id}}/page/{{page.id}}" class="pull-right">
+            <a href="#/user/{{model.uid}}/website/{{model.wid}}/page/{{page.id}}/widget">{{page.name}}</a>
+            <a href="#/user/{{model.uid}}/website/{{model.wid}}/page/{{page.id}}" class="pull-right">
                 <span class="glyphicon glyphicon-cog"></span>
                 <span class="glyphicon glyphicon-play"></span>
             </a>
