footer routing corrected

--- a/public/assignment/views/Page/page-edit.view.client.html
+++ b/public/assignment/views/Page/page-edit.view.client.html
@@ -30,11 +30,12 @@
     </div>
     <a type="submit" href="page-list.view.client.html" class="btn btn-default btn-danger btn-block">Applications</a>
 </form>
+
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-footer">
             <p class="navbar-text pull-right">
-                <a href="../user/profile.view.client.html" class="navbar-link">
+                <a href="#/profile/{{model.route.uid}}" class="navbar-link">
                       <span class="glyphicon glyphicon-user">
                       </span>
                 </a>
