--- a/public/assignment/views/Page/page-list.view.client.html
+++ b/public/assignment/views/Page/page-list.view.client.html
@@ -35,7 +35,7 @@
     <div class="container-fluid">
         <div class="navbar-footer">
             <p class="navbar-text pull-right">
-                <a href="../user/profile.view.client.html" class="navbar-link">
+                <a href="#/profile/{{model.route.uid}}" class="navbar-link">
                       <span class="glyphicon glyphicon-user">
                       </span>
                 </a>
