--- a/public/assignment/views/Page/page-new.view.client.html
+++ b/public/assignment/views/Page/page-new.view.client.html
@@ -28,11 +28,12 @@
         <input ng-model="model.page.description" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
 </form>
+
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-footer">
             <p class="navbar-text pull-right">
-                <a href="../user/profile.view.client.html" class="navbar-link">
+                <a href="#/profile/{{model.route.uid}}" class="navbar-link">
                       <span class="glyphicon glyphicon-user">
                       </span>
                 </a>
