--- a/public/assignment/views/Widget/widget-list.view.client.html
+++ b/public/assignment/views/Widget/widget-list.view.client.html
@@ -33,16 +33,15 @@
         </div>
 </div>
 
-    <nav class="navbar navbar-default navbar-fixed-bottom">
-        <div class="container-fluid">
-            <div class="navbar-footer">
-                <p class="navbar-text pull-right">
-                    <a href="../../../views/User/profile.view.client.html" class="navbar-link">
+<nav class="navbar navbar-default navbar-fixed-bottom">
+    <div class="container-fluid">
+        <div class="navbar-footer">
+            <p class="navbar-text pull-right">
+                <a href="#/profile/{{model.route.uid}}" class="navbar-link">
                       <span class="glyphicon glyphicon-user">
                       </span>
-                    </a>
-                </p>
-            </div>
+                </a>
+            </p>
         </div>
-    </nav>
-
+    </div>
+</nav>
