--- a/public/assignment/views/Page/page-edit.view.client.html
+++ b/public/assignment/views/Page/page-edit.view.client.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-footer">
-            <a class="navbar-brand"href="page-list.view.client.html">
+            <a class="navbar-brand"href="#/user/{{website.developerId}}/website/{{website._id}}/page">
                 <scan class="glyphicon glyphicon-menu-left"></scan>
             </a>
             <a class="navbar-brand" href="#">
