working on getting even listener for new sites

--- a/public/assignment/views/Page/page-edit.view.client.html
+++ b/public/assignment/views/Page/page-edit.view.client.html
@@ -10,7 +10,7 @@
                 Edit Page
             </a>
             <p class="navbar-text pull-right">
-                <a href="page-list.view.client.html" class="navbar-link">
+                <a ng-click="model.updatePage()" class="navbar-link">
                       <span class="glyphicon glyphicon-ok">
                       </span>
                 </a>
@@ -28,7 +28,7 @@
         <label for="exampleInputPassword1">Application Description</label>
         <input ng-model="model.page.description" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
-    <a type="submit" href="page-list.view.client.html" class="btn btn-default btn-danger btn-block">Applications</a>
+    <a type="submit" ng-click="model.deletePage()" class="btn btn-default btn-danger btn-block">Applications</a>
 </form>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
