--- a/public/assignment/views/Page/page-new.view.client.html
+++ b/public/assignment/views/Page/page-new.view.client.html
@@ -9,7 +9,7 @@
                 New Page
             </a>
             <p class="navbar-text pull-right">
-                <a href="page-list.view.client.html" class="navbar-link">
+                <a ng-click="model.createPage(websiteId, page)" class="navbar-link">
                       <span class="glyphicon glyphicon-ok">
                       </span>
                 </a>
