--- a/public/assignment/views/Page/page-list.view.client.html
+++ b/public/assignment/views/Page/page-list.view.client.html
@@ -23,7 +23,7 @@
     <ul class="list-group">
         <li ng-repeat="page in model.pages" class="list-group-item">
             <a href="#/user/{{model.route.uid}}/website/{{page.websiteId}}/page/{{page._id}}/widget">{{page.name}}</a>
-            <a href="#/user/{{model.uid}}/website/{{model.wid}}/page/{{page.id}}" class="pull-right">
+            <a href="#/user/{{model.route.uid}}/website/{{model.route.wid}}/page/{{page._id}}" class="pull-right">
                 <span class="glyphicon glyphicon-cog"></span>
                 <span class="glyphicon glyphicon-play"></span>
             </a>
