running out of power, wolves on my heels, tell my family i love them if I don't make it

--- a/public/assignment/views/Widget/widget-choose.view.client.html
+++ b/public/assignment/views/Widget/widget-choose.view.client.html
@@ -3,7 +3,7 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <div class="navbar-brand">
-                <a href="widget-list.view.client.html">
+                <a href="#/user/{{model.route.uid}}/website/{{model.route.wid}}/page/{{model.route.pid}}/widget">
                     <scan class="glyphicon glyphicon-menu-left"></scan>
                 </a>
                 Choose Widget
