--- a/public/assignment/views/Widget/widget-header.view.client.html
+++ b/public/assignment/views/Widget/widget-header.view.client.html
@@ -1,8 +1,7 @@
-
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-footer">
-            <a class="navbar-brand"href="widget-list.view.client.html">
+            <a class="navbar-brand" href="widget-list.view.client.html">
                 <scan class="glyphicon glyphicon-menu-left"></scan>
             </a>
             <a class="navbar-brand" href="#">
@@ -18,31 +17,40 @@
     </div>
 </nav>
 
-<form>
-    <div class="form-group">
-        <label for="exampleInputEmail1">Name</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Name">
-    </div>
-    <div class="form-group">
-        <label for="exampleInputPassword1">Text</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Text">
-    </div>
-        <label for="headersize">Size</label>
+<div ng-switch="model.route.wgid || '_undefined_' ">
 
-    <div id="headersize" class="dropdown">
-        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            Size
-            <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-        </ul>
+    <div ng-switch-when="'_undefined_'">
+        <h3>SPACEX'S REUSABLE ROCKETS</h3>
     </div>
+    <div ng-switch-default>
+        <form>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Name</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Name">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Text</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Text">
+            </div>
+            <label for="headersize">Size</label>
 
-    <a type="submit" href="widget-list.view.client.html" class="btn btn-danger btn-block">Delete</a>
-</form>
+            <div id="headersize" class="dropdown">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="true">
+                    Size
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                </ul>
+            </div>
+
+            <a type="submit" href="widget-list.view.client.html" class="btn btn-danger btn-block">Delete</a>
+        </form>
+    </div>
+</div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
