--- a/public/assignment/views/Widget/widget-image.view.client.html
+++ b/public/assignment/views/Widget/widget-image.view.client.html
@@ -1,8 +1,7 @@
-
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-footer">
-            <a class="navbar-brand"href="widget-list.view.client.html">
+            <a class="navbar-brand" href="widget-list.view.client.html">
                 <scan class="glyphicon glyphicon-menu-left"></scan>
             </a>
             <a class="navbar-brand" href="#">
@@ -17,31 +16,38 @@
         </div>
     </div>
 </nav>
+<div ng-switch="model.route.wgid || '_undefined_'">
 
-<form>
-    <div class="form-group">
-        <label for="exampleInputEmail1">Name</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Name">
+    <div ng-switch-when="'_undefined_'">
+        <h3>SPACEX'S REUSABLE ROCKETS</h3>
     </div>
-    <div class="form-group">
-        <label for="description"> Text</label>
-        <input type="text" class="form-control" id="description" placeholder="Text">
+    <div ng-switch-default>
+        <form>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Name</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Name">
+            </div>
+            <div class="form-group">
+                <label for="description"> Text</label>
+                <input type="text" class="form-control" id="description" placeholder="Text">
+            </div>
+            <div class="form-group">
+                <label for="imageurl"> URL</label>
+                <input type="url" class="form-control" id="imageurl" placeholder="URL">
+            </div>
+            <div class="form-group">
+                <label for="imagewidth"> Width</label>
+                <input type="number" class="form-control" id="imagewidth" placeholder="Width">
+            </div>
+            <div class="form-group">
+                <label for="exampleImage"> Upload </label>
+                <input type="file" id="exampleImage" class="form-control"/>
+            </div>
+            <a type="submit" href="widget-list.view.client.html" class="btn btn-primary btn-block">Upload Image</a>
+            <a type="submit" href="widget-list.view.client.html" class="btn btn-danger btn-block">Delete</a>
+        </form>
     </div>
-    <div class="form-group">
-        <label for="imageurl"> URL</label>
-        <input type="url" class="form-control" id="imageurl" placeholder="URL">
-    </div>
-    <div class="form-group">
-        <label for="imagewidth"> Width</label>
-        <input type="number" class="form-control" id="imagewidth" placeholder="Width">
-    </div>
-    <div class="form-group">
-        <label for="exampleImage"> Upload </label>
-        <input type="file" id = "exampleImage" class="form-control"/>
-    </div>
-    <a type="submit" href="widget-list.view.client.html" class="btn btn-primary btn-block">Upload Image</a>
-    <a type="submit" href="widget-list.view.client.html" class="btn btn-danger btn-block">Delete</a>
-</form>
+</div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
