--- a/public/assignment/views/Widget/widget-youtube.view.client.html
+++ b/public/assignment/views/Widget/widget-youtube.view.client.html
@@ -1,8 +1,7 @@
-
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-footer">
-            <a class="navbar-brand"href="widget-list.view.client.html">
+            <a class="navbar-brand" href="widget-list.view.client.html">
                 <scan class="glyphicon glyphicon-menu-left"></scan>
             </a>
             <a class="navbar-brand" href="#">
@@ -18,25 +17,34 @@
     </div>
 </nav>
 
-<form>
-    <div class="form-group">
-        <label for="exampleInputEmail1"> Name</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Name">
+<div ng-switch="model.route.wgid || '_undefined_'">
+
+    <div ng-switch-when="'_undefined_'">
+        <h3>SPACEX'S REUSABLE ROCKETS</h3>
     </div>
-    <div class="form-group">
-        <label for="exampleInputPassword1"> Text</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Text">
+    <div ng-switch-default>
+        <form>
+            <div class="form-group">
+                <label for="exampleInputEmail1"> Name</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Name">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1"> Text</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Text">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1"> URL</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="URL">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1"> Width</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Width">
+            </div>
+            <a type="submit" href="widget-list.view.client.html" class="btn btn-danger btn-block">Delete</a>
+        </form>
     </div>
-    <div class="form-group">
-        <label for="exampleInputPassword1"> URL</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="URL">
-    </div>
-    <div class="form-group">
-        <label for="exampleInputPassword1"> Width</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Width">
-    </div>
-    <a type="submit" href="widget-list.view.client.html" class="btn btn-danger btn-block">Delete</a>
-</form>
+</div>
+
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-footer">
