--- a/public/assignment/views/Widget/widget-youtube.view.client.html
+++ b/public/assignment/views/Widget/widget-youtube.view.client.html
@@ -1,6 +1,5 @@
-<div ng-switch="model.route.wgid || '_undefined_'">
-
-    <div ng-switch-when="'_undefined_'">
+<div ng-switch="model.route.wgid">
+    <div ng-switch-when="undefined">
         <h3>SPACEX'S REUSABLE ROCKETS</h3>
     </div>
     <div ng-switch-default>
