--- a/public/assignment/views/Widget/widget-image.view.client.html
+++ b/public/assignment/views/Widget/widget-image.view.client.html
@@ -1,7 +1,7 @@
 <div ng-switch="model.route.wgid">
 
     <div ng-switch-when="undefined">
-        <h3>SPACEX'S REUSABLE ROCKETS</h3>
+        <img src="{{widget.url}}" width="{{widget.width}}" />
     </div>
     <div ng-switch-default>
         <nav class="navbar navbar-default navbar-fixed-top">
