--- a/public/assignment/views/Widget/widget-youtube.view.client.html
+++ b/public/assignment/views/Widget/widget-youtube.view.client.html
@@ -1,6 +1,7 @@
 <div ng-switch="model.route.wgid">
     <div ng-switch-when="undefined">
-        <h3>SPACEX'S REUSABLE ROCKETS</h3>
+        <iframe width="{{widget.width}}" ng-src="{{model.getSafeUrl(widget)}}" frameborder="0" allowfullscreen></iframe>
+        {{model.getSafeUrl(widget)}}
     </div>
     <div ng-switch-default>
         <nav class="navbar navbar-default navbar-fixed-top">
